# maybe-axum-utoipa-bug

./: Cargo.toml  README.md  openapi-spec.json
src/: main.rs
