[package]
name = "maybe-axum-utoipa-bug"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
axum-server = "0.7.2"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
utoipauto = "0.2.0"
